feat: add signing capability to credential generator (#654)
* feat: add signing capability to credential generator

* only add status if present

---------

Co-authored-by: Enrico Risa <enrico.risa@gmail.com>